--- a/src/app/pages/booking-history/booking-history.component.html
+++ b/src/app/pages/booking-history/booking-history.component.html
@@ -30,7 +30,8 @@
                         <span class="demuc lighter">MÃ VÉ</span><br>
                         <span class="detail harder">{{ ticket?.idTicket }}</span><br>
                         <span class="demuc lighter">NGÀY ĐẶT</span><br>
-                        <span class="detail harder" style="font-size: 22px;">{{ ticket?.ngaydatve }}</span>
+                        <span class="detail harder" style="font-size: 22px;">{{ ticket?.ngaydatve | date : "dd/MM/yyyy" }}
+                        </span>
                     </div>
                     <!-- Chi tiết vé -->
                     <div class="col-9 cover margin-left mb-3 mx-3" >
@@ -190,27 +191,6 @@
                         </div>
                     </div> -->
                 </div>
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-center mt-4">
-                        <li></li>
-                        <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
-                          <span aria-hidden="true">&laquo;</span>
-                        </a>
-                      </li>
-                      <li class="page-item"><a class="page-link" href="#">1</a></li>
-                      <li class="page-item"><a class="page-link" href="#">2</a></li>
-                      <li class="page-item"><a class="page-link abc" href="#">3</a></li>
-                      <li class="page-item"><a class="page-link" href="#">4</a></li>
-                      <li class="page-item"><a class="page-link" href="#">5</a></li>
-                      <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                          <span aria-hidden="true">&raquo;</span>
-                        </a>
-                      </li>
-                      <li></li>
-                    </ul>
-                  </nav>
             </div>
         </div>
     </body>
