--- a/src/app/pages/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/pages/admin-dashboard/admin-dashboard.component.scss
@@ -3,17 +3,31 @@
     // flex-direction: row;
     // overflow: hidden
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     min-width: 100% !important;
     margin: 0px !important;
     padding: 0px !important;
-    min-height: 100% !important;
+    
+
 }
 
+
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
 .admin-nav {
     // width: 20%;
     // width: 20%;
-    width: auto;
+    
     // display: none;
 }
 
@@ -22,7 +36,7 @@
     display: inline-block;
     position: relative;
     padding: 30px;
-    margin: 20px;
+    
     // margin-left: 193.477px;
     // margin-left: 250px;
     
