--- a/src/app/pages/booking-ticket/booking-ticket.component.html
+++ b/src/app/pages/booking-ticket/booking-ticket.component.html
@@ -360,6 +360,7 @@
         <div class="input-group mb-3 px-2">
           <input
             type="date"
+            id="inputstartdate"
             class="form-control"
             formControlName="startDate"
             aria-label="Sizing example input"
