--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -22,10 +22,10 @@
           <a class="nav-link text-color"  routerLink="/booking-ticket">
             Chuyến bay</a>
         </li>
-        <li class="nav-item" style="color: white !important">
+        <!-- <li class="nav-item" style="color: white !important">
           <a class="nav-link text-color"  (click)="canAccessAdmin('/admin-dashboard/admin-flight-management')">
             Admin</a>
-        </li>
+        </li> -->
         <li class="nav-item dropdown ">
           <a
             class="nav-link dropdown-toggle text-color"
