--- a/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
+++ b/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
@@ -215,9 +215,7 @@
 .mat-column-soLuong,
 .mat-column-tongGia,
 .mat-column-tinhTrang,
-.mat-column-approve,
-.mat-column-cancel,
-.mat-column-delete {
+.mat-column-action {
     color: black;
     text-align: center;
     border-bottom: 1px solid currentColor;
@@ -229,7 +227,7 @@
 }
 td button {
     background-color: #19A7CE;
-    border: none;
+    border: 1px solid #19A7CE;
     color: white;
     width: 50px;
     padding: 5px;
