--- a/src/app/pages/view-profile/view-profile.component.html
+++ b/src/app/pages/view-profile/view-profile.component.html
@@ -1,7 +1,14 @@
 <app-header></app-header>
 <!-- <app-navbar></app-navbar> -->
 <app-navbar></app-navbar>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>View-Profile</title>
+</head>
+<body>
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-2"></div>
@@ -80,5 +87,5 @@
       </div>
     </div>
   </div>
-
-
+</body>
+</html>
