--- a/src/app/pages/guest-management/guest-management.component.html
+++ b/src/app/pages/guest-management/guest-management.component.html
@@ -4,12 +4,12 @@
 <div id="Them">
   <div class="col-lg-10 col-md-9">
   </div>
-  <a routerLink="/admin-dashboard/guest-management/new-account">
+  <!-- <a routerLink="/admin-dashboard/guest-management/new-account">
     <div class="col-lg-2 col-md-3">
       <button type="button" class="btn btn-primary" id="btnThem" style="height: 50px;background-color:#146C94;">Thêm tài
         khoản</button>
     </div>
-  </a>
+  </a> -->
 </div>
 <div class="form">
   <div class="row g-3">
