--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -7,20 +7,20 @@
                 <h1 style="margin-bottom: 20px;">ĐĂNG KÍ</h1>
 
                     <div class="form-group">
-                        <label style="margin-top: 0;">TÀI KHOẢN</label>
-                        <input type="text" name="new_user_name" class="input-container" id="username-container" placeholder="Nhập tài khoản của bạn vào đây" formControlName="taiKhoan1">
+                        <label style="margin-top: 0;">TÊN TÀI KHOẢN</label>
+                        <input type="text" name="new_user_name" class="input-container" id="username-container" placeholder="Nhập tên tài khoản" formControlName="taiKhoan1">
                     </div>
                     <div class="form-group">
                         <label>HỌ VÀ TÊN</label>
-                        <input type="text" name="new_user_fullname" class="input-container" id="fullname-container" placeholder="Nhập tài khoản của bạn vào đây" formControlName="tenKH">
+                        <input type="text" name="new_user_fullname" class="input-container" id="fullname-container" placeholder="Nhập họ tên" formControlName="tenKH">
                     </div>
                     <div class="form-group">
                         <label>SỐ ĐIỆN THOẠI</label>
-                        <input type="text" name="new_user_phone" class="input-container" id="username-container" placeholder="Nhập tài khoản của bạn vào đây" formControlName="sdt">
+                        <input type="text" name="new_user_phone" class="input-container" id="username-container" placeholder="Nhập số điện thoại" formControlName="sdt">
                     </div>
                     <div class="form-group">
-                        <label>GMAIL</label>
-                        <input type="text" name="new_user_gmail" class="input-container" id="username-container" placeholder="Nhập tài khoản của bạn vào đây" formControlName="gamilKH">
+                        <label>EMAIL</label>
+                        <input type="text" name="new_user_gmail" class="input-container" id="username-container" placeholder="Nhập email" formControlName="gamilKH">
                     </div>
                     <div class="form-group">
                         <label>GIỚI TÍNH</label>
