--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
           <a class="nav-link text-color actived"  routerLink="/home">
             Trang chủ</a>
         </li>
-        <li class="nav-item" style="color: white !important">
+        <li class="nav-item" style="color: white !important" *ngIf="isLoggedIn">
           <a class="nav-link text-color"  (click)="canAccess('/booking-history')">
             Lịch sử vé</a>
         </li>
@@ -26,7 +26,7 @@
           <a class="nav-link text-color"  (click)="canAccessAdmin('/admin-dashboard/admin-flight-management')">
             Admin</a>
         </li> -->
-        <li class="nav-item dropdown ">
+        <li class="nav-item dropdown " *ngIf="isLoggedIn">
           <a
             class="nav-link dropdown-toggle text-color"
             routerLink="."
@@ -52,7 +52,7 @@
         <div class="" style=" margin-top: 5px;margin-bottom: 5px;" *ngIf="!isLoggedIn">
           <a class="btn-signUp" mat-fab extended routerLink="/sign-up">
             <mat-icon>person_add</mat-icon>
-            Sign Up
+            Đăng ký
           </a>
           
           <a
@@ -61,6 +61,7 @@
             mat-fab
             extended
             routerLink="/login"
+            style="white-space: nowrap"
           >
             <mat-icon>login</mat-icon>
             Login
