--- a/src/app/components/admin-navigation/admin-navigation.component.html
+++ b/src/app/components/admin-navigation/admin-navigation.component.html
@@ -14,6 +14,7 @@
                 <button class="menu-button item-offcanvas" routerLink="/admin-dashboard/admin-ticket-management" routerLinkActive="active">Quản lý vé</button>
                 <button class="menu-button item-offcanvas" routerLink="/admin-dashboard/guest-management" routerLinkActive="active">Quản lý khách hàng</button>
                 <button class="menu-button item-offcanvas" routerLink="/admin-dashboard/statist" routerLinkActive="active">Thống kê</button>
+                <button class="menu-button item-offcanvas" routerLink="/home" routerLinkActive="active">Quay lại trang chủ</button>
                 <button class="menu-button item-offcanvas" (click)="onLogout()">LOG OUT</button>
             </div>
         </div>
