--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -36,7 +36,8 @@
     background-color: #19A7CE 
     !important;
     border-bottom: 3px solid #fff;
-    
+    // pointer-events: auto;
+    cursor: pointer;
     
     
     
