--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,18 +14,18 @@
           <a class="nav-link text-color actived"  routerLink="/home">
             Trang chủ</a>
         </li>
-        <li class="nav-item" style="color: white !important" *ngIf="isLoggedIn">
+        <li class="nav-item" style="color: white !important" *ngIf="isUser">
           <a class="nav-link text-color"  (click)="canAccess('/booking-history')">
             Lịch sử vé</a>
         </li>
-        <li class="nav-item" style="color: white">
+        <li class="nav-item" style="color: white" *ngIf="isUser">
           <a class="nav-link text-color"  routerLink="/booking-ticket">
             Chuyến bay</a>
         </li>
-        <!-- <li class="nav-item" style="color: white !important">
+        <li class="nav-item" style="color: white !important" *ngIf="isAdmin">
           <a class="nav-link text-color"  (click)="canAccessAdmin('/admin-dashboard/admin-flight-management')">
-            Admin</a>
-        </li> -->
+            Quản lý</a>
+        </li>
         <li class="nav-item dropdown " *ngIf="isLoggedIn">
           <a
             class="nav-link dropdown-toggle text-color"
@@ -41,7 +41,7 @@
             Tài khoản
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item " routerLink="/view-profile">Xem thông tin</a></li>
+            <li *ngIf="isUser"><a class="dropdown-item " routerLink="/view-profile">Xem thông tin</a></li>
             <li><a class="dropdown-item" routerLink="/change-pass">Đổi mật khẩu</a></li>
             <li><a class="dropdown-item" (click)="onLogout()">Đăng xuất</a></li>
           </ul>
