--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
           <a class="nav-link text-color"  (click)="canAccess('/booking-history')">
             Lịch sử vé</a>
         </li>
-        <li class="nav-item" style="color: white" *ngIf="isUser">
+        <li class="nav-item" style="color: white">
           <a class="nav-link text-color"  routerLink="/booking-ticket">
             Chuyến bay</a>
         </li>
