--- a/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.scss
+++ b/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.scss
@@ -84,6 +84,8 @@
 :not(.btn-check)+.btn:active {
     background-color: #19A7CE;
     border-color: #19A7CE;
+    color: white 
+    !important
 }
 
 /* Thông tin bên trái */
