--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -100,57 +100,13 @@
       </div>
     </div>
     <div class="div-center margin" style="flex-direction: column">
-      <h1 class="font-title">BẠN CÓ THỂ XUẤT PHÁT TỪ</h1>
+      <h1 class="font-title">CHUYẾN BAY MỚI NHẤT</h1>
       <div class="container overflow-hidden text-center">
-        <div class="row gy-5 justify-content-evenly">
-          <div class="col-12 col-xl-4 margin-top div-center">
-            <div class="p-3 div-center" style="margin-right: 60px;">
-              <img src="assets/img/Screenshot 2023-10-19 223531.png" alt="img" width="300px" />
-            </div>
-          </div>
-          <div class="col-12 col-xl-8 margin-top" style="border: 2px solid #146c94; border-radius: 20px;overflow: hidden;">
-            <div id="carouselExample1" class="carousel" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active " data-bs-interval="3000">
-                  <img src="../../../assets/img/vietnam.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="../../../assets/img/australia .png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="../../../assets/img/hongkong.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="../../../assets/img/london.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="../../../assets/img/paris.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="../../../assets/img/thailand.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="../../../assets/img/usa.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="../../../assets/img/singapore.png" class="d-block w-100" alt="...">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample1" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample1" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-          </div>
-        </div>
+        
       </div>
     </div>
     <div class="div-center margin" style="flex-direction: column">
-      <h1 class="font-title">ĐẾN</h1>
+      <h1 class="font-title">CÁC NƠI BẠN CÓ THỂ ĐI</h1>
       <div class="container overflow-hidden text-center">
         <div class="row gy-5 justify-content-evenly">
           <div class="col-12 col-xl-8 margin-top " style="border: 2px solid #146c94; border-radius: 20px;overflow: hidden;">
