--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -101,7 +101,7 @@
     </div>
     <div class="div-center margin" style="flex-direction: column">
       <h1 class="font-title">CHUYẾN BAY MỚI NHẤT</h1>
-      <div class="container overflow-hidden text-center">
+      <div class="container overflow-hidden text-center" style="border: 2px solid #146c94; border-radius: 20px;overflow: hidden;height: 500px;">
         
       </div>
     </div>
@@ -124,7 +124,6 @@
                 <div class="carousel-item"data-bs-interval="3000">
                   <img src="../../../assets/img/singapore.png" class="d-block w-100" alt="...">
                 </div>
-
                 <div class="carousel-item active" data-bs-interval="3000">
                   <img src="../../../assets/img/vietnam.png" class="d-block w-100" alt="...">
                 </div>
