--- a/src/app/pages/admin-flight-management/admin-flight-management.component.scss
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.scss
@@ -198,24 +198,8 @@
     justify-content: center;
     background-color: white;
     color: black;
-    // text-wrap: nowrap;
 }
-// .mat-column-flight_id,
-// .mat-column-plane_id,
-// .mat-column-plane_name,
-// .mat-column-departure_location,
-// .mat-column-arrival_location,
-// .mat-column-departure_date,
-// .mat-column-flight_time,
-// .mat-column-BSN_seats,
-// .mat-column-ECO_seats,
-// .mat-column-price,
-// .mat-column-edit,
-// .mat-column-delete {
-//     color: black;
-//     text-align: center;
-//     border-bottom: 1px solid currentColor;
-// }
+
 
 .mat-column-MaChuyenBay,
 .mat-column-MaMayBay,
@@ -227,6 +211,7 @@
 .mat-column-SoLuongVeBsn,
 .mat-column-SoLuongVeEco,
 .mat-column-DonGia,
+.mat-column-action,
 .mat-column-edit,
 .mat-column-delete {
     color: black;
@@ -262,10 +247,7 @@ td button:hover {
         color: white;
     }
 }
-// .mat-row,
-// .mat-header-row {
-//     min-width: 800px;
-// }
+
 mat-paginator {
     background-color: #146C94;
     color: white;
