--- a/src/app/pages/edit-flight/edit-flight.component.html
+++ b/src/app/pages/edit-flight/edit-flight.component.html
@@ -164,9 +164,9 @@
                 [(ngModel)]="editFlightRequest.soLuongVeEco">
             </div>
             <div class="form-field">
-                <label for="price">Giá</label><br>
+                <label for="price">Giá (đ)</label><br>
                 <input type="text" id="price" name="price"
-                oninput="this.value = (parseInt(this.value.replace(/[^0-9]/g, '')) || 0).toLocaleString() + ' đ'"
+                oninput="this.value = (parseInt(this.value.replace(/[^0-9]/g, '')) || 0).toLocaleString()"
                 [(ngModel)]="editFlightRequest.donGia"
                 style="text-align: right;">
             </div>
