--- a/src/app/pages/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.html
@@ -119,18 +119,27 @@
         <td mat-cell *matCellDef="let element"> {{element.donGia | number:'1.0-3'}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="edit">
+      <!-- <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef> </th>
-        <td mat-cell *matCellDef="let element"> 
-          <!-- <button routerLink="/admin-dashboard/edit-flight/{{element.maChuyenBay}}"
-            routerLinkActive="active">Sửa</button> -->
-            <button (click)="toEdit(element.maChuyenBay)">Sửa</button>
-          </td>
+        <td mat-cell *matCellDef="let element">
+          <button (click)="toEdit(element.maChuyenBay)">Sửa</button>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef> </th>
-        <td mat-cell *matCellDef="let element"> <button (click)="deleteFlight(element.maChuyenBay)">Xóa</button> </td>
+        <td mat-cell *matCellDef="let element">
+          <button (click)="deleteFlight(element.maChuyenBay)">Xóa</button>
+        </td>
+      </ng-container> -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let element">
+          <div style="white-space: nowrap;">
+            <button (click)="toEdit(element.maChuyenBay)">Sửa</button>
+            <button style="margin: 5px;" *ngIf="element.soLuongVeEco.startsWith('0/') && element.soLuongVeBsn.startsWith('0/')"(click)="deleteFlight(element.maChuyenBay)">Xóa</button>
+          </div>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
