--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -100,9 +100,12 @@
       </div>
     </div>
     <!-- newestflights -->
-    <div class="div-center margin" style="flex-direction: column">
+    <div class="div-center " style="flex-direction: column">
       <h1 class="font-title">CHUYẾN BAY MỚI NHẤT</h1>
-      <div class="container  text-center row" style=" border-radius: 20px;height: 350px;display: flex;justify-content: center;align-items: center;">
+      <div class="div-center">
+        <div class="container  text-center row" style=" border-radius: 20px;height: 350px;display: flex;justify-content: center;align-items: center;">
+      </div>
+      
         <div class="col-sm-4 mb-3 mb-sm-0" style="height: 300px;padding-inline: 15px;">
           <div class="card" style="height: 300px;padding: 5px;border-radius: 20px;border: 2px solid #146c94;">
             <div class="card-body div-center" style="flex-direction: column;">
