navigate to booking-ticket

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -116,7 +116,7 @@
                 Ngày xuất phát: {{newestflights[0].ngayXuatPhat | date : "dd/MM/yyyy"}} <br> Giờ bay: {{newestflights[0].gioBay}}
                 <br>
                 Đơn giá: {{newestflights[0].donGia}}</p>
-                <a href="#" class="btn" style="text-align: center;color: white;background-color: #146c94;border-radius: 5px;width: 100px;">Đặt vé ngay</a>
+                <a routerLink="/booking-ticket" routerLinkActive="active" class="btn" style="text-align: center;color: white;background-color: #146c94;border-radius: 5px;width: 100px;">Đặt vé ngay</a>
             </div>
           </div>
         </div>
@@ -130,7 +130,7 @@
                 Ngày xuất phát: {{newestflights[1].ngayXuatPhat | date : "dd/MM/yyyy"}} <br> Giờ bay: {{newestflights[1].gioBay}}
                 <br>
                 Đơn giá: {{newestflights[1].donGia}}</p>
-                <a href="#" class="btn" style="text-align: center;color: white;background-color: #146c94;border-radius: 5px;width: 100px;">Đặt vé ngay</a>
+                <a routerLink="/booking-ticket" routerLinkActive="active" class="btn" style="text-align: center;color: white;background-color: #146c94;border-radius: 5px;width: 100px;">Đặt vé ngay</a>
             </div>
           </div>
         </div>
@@ -144,7 +144,7 @@
                 Ngày xuất phát: {{newestflights[2].ngayXuatPhat | date : "dd/MM/yyyy"}} <br> Giờ bay: {{newestflights[2].gioBay}}
                 <br>
                 Đơn giá: {{newestflights[2].donGia}}</p>
-              <a href="#" class="btn" style="text-align: center;color: white;background-color: #146c94;border-radius: 5px;width: 100px;">Đặt vé ngay</a>
+              <a routerLink="/booking-ticket" routerLinkActive="active" class="btn" style="text-align: center;color: white;background-color: #146c94;border-radius: 5px;width: 100px;">Đặt vé ngay</a>
             </div>
           </div>
         </div>
